# advent-of-code-2024

./: .pre-commit-config.yaml  README.md  pyproject.toml
aoc24/: __init__.py  d01.py  p01.py  p02.py  p03.py  p04.py  p05.py  p06.py  p07.py  p08.py  p09.py  p10.py  p11.py  p12.py  p13.py  p14.py  p15.py  p16.py  p17.py  p18.py  p19.py  p20.py  p21.py  p22.py  p23.py  p24.py  p25.py
aoc25/: __init__.py  p01.py  p02.py  p03.py  p04.py  p05.py  p06.py  p07.py  p08.py  p09.py  p10.py  p11.py  p12.py
data/: .gitignore
tests/: __init__.py  aoc25_examples.yaml  examples.yaml  test_aoc24.py  test_aoc25.py
