[tool.poetry]
name = "aoc24"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.1"
pydantic = {extras = ["email"], version = "^2.8.2"}
jupyter = "^1.0.0"
tqdm = "^4.67.0"
pyyaml = "^6.0.2"
ortools = "^9.11.4210"
pydot = "^3.0.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.2"
coverage = "^7.6.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "EM101",  # ok to use raw string for exception
    "TRY",
    "PLR2004",  # not all constants need a variable
    "S101",  # assert is ok
    "T201",  # print is ok
    "FIX",  # TODO is ok
    "TD",  # flexible TODO
    "RET503",  # implicit return None ok
    "D100",  # no docstring required for public modules
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ANN201", "D103"]
"__init__.py" = ["F401"]
